# LittleWars

./: .gitignore  CMakeLists.txt  design.md  engine.cfg  runlog.txt
Geist/Source/: BaseUnits.cpp  Config.cpp  Engine.cpp  GhostSerializer.h  Globals.cpp  Gui.cpp  GuiElements.cpp  GuiManager.cpp  IO.cpp  InputSystem.cpp  Logging.cpp  ParticleSystem.cpp  Primitives.cpp  RNG.cpp  RaylibModel.cpp  ResourceManager.cpp  ScriptingSystem.cpp  ScriptingSystem.h  SoundSystem.cpp  StateMachine.cpp  StateMachine.h  TooltipSystem.cpp
Redist/: engine.cfg  littlewars  runlog.txt
Redist/Data/: campaign_setup.json  player_tasks.json
Redist/Images/: GRUCAV.SPR  GRUINF.SPR  GRUXBW.SPR  IMPBOW.SPR  IMPGRT.SPR  IMPHAL.SPR
Source/: CampaignSetupConfig.cpp  CampaignSetupConfig.h  CastleDesignState.cpp  CastleDesignState.h  CombatState.cpp  CombatState.h  CombatUnits.cpp  CombatUnits.h  GameGlobals.cpp  GameGlobals.h  LWGlobals.h  LittlePeopleSprites.cpp  LittlePeopleSprites.h  Main.cpp  MainState.cpp  MainState.h  MapTilesSprites.cpp  MapTilesSprites.h  OptionsState.cpp  OptionsState.h  OverworldMap.cpp  OverworldMap.h  Player.cpp  Player.h  PlayerTasksConfig.cpp  PlayerTasksConfig.h  RegionMinimap.cpp  RegionMinimap.h  RegionTerrainMesh.cpp  RegionTerrainMesh.h  RegionUILayout.cpp  RegionUILayout.h  RegionView.cpp  RegionView.h  SetupGameState.cpp  SetupGameState.h  TerrainTextures.cpp  TerrainTextures.h  TitleState.cpp  TitleState.h
Source/Geist/: Engine.cpp  Engine.h  Gui.h  ScriptingSystem.cpp  SoundSystem.h  StateMachine.cpp
